srv/wordpress/Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-mariadb
  labels:
    app: wordpress-mariadb
spec:
  template:
    metadata:
      labels:
        app: wordpress-mariadb
      annotations:
        pod.alpha.kubernetes.io/init-containers: '
          [
            {
              "name": "copy-custom-config",
              "image": "bitnami/mariadb:10.1.23-r2",
              "command": ["sh", "-c", "mkdir -p /bitnami/mariadb/conf && cp -n /bitnami/mariadb_config/my.cnf /bitnami/mariadb/conf/my_custom.cnf"],
              "volumeMounts": [
                {
                  "name": "config",
                  "mountPath": "/bitnami/mariadb_config"
                },
                {
                  "name": "data",
                  "mountPath": "/bitnami/mariadb"
                }
              ]
            }
          ]'
    spec:
      containers:
      - name: wordpress-mariadb
        image: "bitnami/mariadb:10.1.23-r2"
        ports:
        - name: mysql
          containerPort: 3306
        livenessProbe:
          exec:
            command:
            - mysqladmin
            - ping
          initialDelaySeconds: 200
          timeoutSeconds: 7
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
        volumeMounts:
        - name: data
          mountPath: /bitnami/mariadb
      volumes:
      - name: config
        configMap:
          name: wordpress-mariadb
      - name: data
        persistentVolumeClaim:
          claimName: wordpress-mariadb

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-wordpress
  labels:
    app: wordpress-wordpress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress-wordpress
    spec:
      containers:
      - name: wordpress-wordpress
        image: "bitnami/wordpress:4.8.1-r0"
        ports:
        - name: https
          containerPort: 443
        livenessProbe:
          httpGet:
            path: /wp-login.php
            port: 443
            scheme: HTTPS
          initialDelaySeconds: 1500
          timeoutSeconds: 10
          failureThreshold: 6
        volumeMounts:
        - mountPath: /bitnami/apache
          name: wordpress-data
          subPath: apache
        - mountPath: /bitnami/wordpress
          name: wordpress-data
          subPath: wordpress
        - mountPath: /bitnami/php
          name: wordpress-data
          subPath: php
        resources:
          requests:
            memory: 512Mi
            cpu: 300m
      volumes:
      - name: wordpress-data
        persistentVolumeClaim:
          claimName: wordpress-wordpress
