srv/wordpress/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress-mariadb
  name: wordpress-mariadb
spec:
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: wordpress-mariadb

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: wordpress-wordpress
