srv/wordpress/Ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: wordpress
  annotations:
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
        - wordpress.sj.ifsc.edu.br
      secretName: tls-ifsc-sje-wildcard
  rules:
    - host: wordpress.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress
              servicePort: 443
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: gtampto
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: 'https://wordpress.sj.ifsc.edu.br/gtampto'
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
    - host: gtampto.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress
              servicePort: 443
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: mcc2016
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: 'https://wordpress.sj.ifsc.edu.br/mcc2016'
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
    - host: mcc2016.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress
              servicePort: 443
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: mcc2014
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: 'https://wordpress.sj.ifsc.edu.br/mcc2014'
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
    - host: mcc2014.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress
              servicePort: 443
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: sel
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: 'https://wordpress.sj.ifsc.edu.br/sel'
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
    - host: sel.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress
              servicePort: 443
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ctic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: 'https://wordpress.sj.ifsc.edu.br/ctic-sje'
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
    - host: ctic.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress
              servicePort: 443
